feat: Scala RTL