@@ -5,19 +5,19 @@ package rtl;
  *
  * Subclasses должны по-прежнему переопределять equals(Object), hashCode() и toString().
  */
-public abstract class Any {
+public abstract class Any extends Object {
     /**
      * Возвращает строковое представление как rtl.String.
      * По умолчанию использует java.lang.Object#toString().
      */
     public String toScalaString() {
-        return String.valueOf(this.toString());
+        return new String(this.toString());
     }
 
     /**
      * Проверка типа (аналог isInstanceOf[T]).
      */
     public Boolean isInstanceOf(Object cls) {
-        return Boolean.valueOf(cls.isInstance(this));
+        return new Boolean(cls.getClass().isInstance(this));
     }
 }
